// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`c-alarm-tag-field Renders \`c-alarm-tag-field\` with custom props 1`] = `
<div
  chips=""
  class="v-input c-select-field c-lazy-search-field mt-4 c-alarm-tag-field v-input--is-label-active v-input--is-dirty v-input--is-disabled v-input--dense theme--light v-text-field v-select v-select--chips v-select--chips--small v-select--is-multi v-autocomplete"
  dense=""
  hide-details=""
  menu-props="[object Object]"
  multiple="multiple"
>
  <div
    class="v-input__control"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      class="v-input__slot"
      role="combobox"
    >
      <div
        class="v-select__slot"
      >
        <label
          class="v-label v-label--active v-label--is-disabled theme--light"
          style="left: 0px; position: absolute;"
        >
          Custom label
        </label>
        <div
          class="v-select__selections"
        >
          <c-alarm-action-chip-stub
            class="c-alarm-tag-field__tag"
            closable=""
            ellipsis=""
            title="Tag 1"
          >
      Tag 1
          </c-alarm-action-chip-stub>
          <input
            autocomplete="off"
            disabled="disabled"
            name="customName"
            type="text"
          />
        </div>
        <div
          class="v-input__append-inner"
        >
          <div
            class="v-input__icon v-input__icon--clear"
          >
            <button
              aria-label="Clear Custom label"
              class="v-icon notranslate v-icon--disabled v-icon--link material-icons theme--light"
              disabled="disabled"
              tabindex="-1"
              type="button"
            >
              clear
            </button>
          </div>
        </div>
        <div
          class="v-input__append-inner"
        >
          <div
            class="v-input__icon v-input__icon--append"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate v-icon--disabled material-icons theme--light"
            >
              arrow_drop_down
            </i>
          </div>
        </div>
        <input
          name="customName"
          type="hidden"
          value="Tag 1"
        />
      </div>
      <div
        class="v-menu"
      />
    </div>
    <div
      class="v-text-field__details"
    >
      <div
        class="v-messages theme--light"
      >
        <transition-group-stub
          class="v-messages__wrapper"
          name="message-transition"
          tag="div"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`c-alarm-tag-field Renders \`c-alarm-tag-field\` with custom props 2`] = `
<div
  class="v-menu__content theme--light v-autocomplete__content c-lazy-search-field__list"
  style="max-height: 304px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
>
  <div
    class="v-list v-select-list v-sheet theme--light v-list--dense theme--light"
    role="listbox"
    tabindex="-1"
  >
    <div
      aria-selected="true"
      class="c-alarm-tag-field__list-item v-list-item primary--text v-list-item--active v-list-item--link theme--light"
      role="option"
      tabindex="0"
    >
      <div
        class="v-list-item__action"
      >
        <div
          class="v-input theme--light v-input--selection-controls v-input--checkbox"
        >
          <div
            class="v-input__control"
          >
            <div
              class="v-input__slot"
            >
              <div
                class="v-input--selection-controls__input"
              >
                <i
                  aria-hidden="true"
                  class="v-icon notranslate material-icons theme--light"
                >
                  check_box_outline_blank
                </i>
                <input
                  aria-checked="false"
                  role="checkbox"
                  type="checkbox"
                  value=""
                />
                <div
                  class="v-input--selection-controls__ripple"
                />
              </div>
            </div>
            <div
              class="v-messages theme--light"
            >
              <transition-group-stub
                class="v-messages__wrapper"
                name="message-transition"
                tag="div"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="v-list-item__content c-word-break-all"
      >
        Tag 1
      </div>
    </div>
    <div
      class="c-lazy-search-field__append"
    />
  </div>
</div>
`;

exports[`c-alarm-tag-field Renders \`c-alarm-tag-field\` with default props 1`] = `
<div
  chips=""
  class="v-input c-select-field c-lazy-search-field mt-4 c-alarm-tag-field v-input--dense theme--light v-text-field v-select v-select--chips v-select--chips--small v-select--is-multi v-autocomplete"
  dense=""
  hide-details=""
  menu-props="[object Object]"
  multiple="multiple"
>
  <div
    class="v-input__control"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      class="v-input__slot"
      role="combobox"
    >
      <div
        class="v-select__slot"
      >
        <label
          class="v-label theme--light"
          style="left: 0px; position: absolute;"
        >
          Tag
        </label>
        <div
          class="v-select__selections"
        >
          <input
            autocomplete="off"
            name="tag"
            type="text"
          />
        </div>
        <div
          class="v-input__append-inner"
        >
          <div />
        </div>
        <div
          class="v-input__append-inner"
        >
          <div
            class="v-input__icon v-input__icon--append"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light"
            >
              arrow_drop_down
            </i>
          </div>
        </div>
        <input
          name="tag"
          type="hidden"
        />
      </div>
      <div
        class="v-menu"
      />
    </div>
    <div
      class="v-text-field__details"
    >
      <div
        class="v-messages theme--light"
      >
        <transition-group-stub
          class="v-messages__wrapper"
          name="message-transition"
          tag="div"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`c-alarm-tag-field Renders \`c-alarm-tag-field\` with default props 2`] = `
<div
  class="v-menu__content theme--light v-autocomplete__content c-lazy-search-field__list"
  style="max-height: 304px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
>
  <div
    class="v-list v-select-list v-sheet theme--light v-list--dense theme--light"
    role="listbox"
    tabindex="-1"
  >
    <div
      class="v-list-item theme--light"
      tabindex="-1"
    >
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          No data available
        </div>
      </div>
    </div>
    <div
      class="c-lazy-search-field__append"
    />
  </div>
</div>
`;
